tests/paczka1/small_fuzzy/69101196.err
Error in line 1: SkN S370 5,6
Error in line 11: TDA S166 32,9
Error in line 12: TDA S907 50,2
